--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec babel-node server.js",
-    "start": "node server.js",
-    "lint": "eslint controllers/*.js --fix"
+    "start": "node --exec babel-node  server.js"
   },
   "keywords": [],
   "author": "",
